# talk-to-the-tab

./: README.md
backend/: .env.example  main.py  pyproject.toml  railway.json  schema.sql
frontend/: .env  .env.example  Dockerfile  biome.json  index.html  package.json  railway.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  google.d.ts  index.css
frontend/src/components/: ProtectedRoute.tsx  ReceiptPaper.tsx
frontend/src/components/ui/: button.tsx  container.tsx  header.tsx  receipt.tsx
frontend/src/contexts/: LiveAPIContext.tsx
frontend/src/hooks/: use-current-receipt.ts  use-live-api.ts  use-microphone.ts  use-receipt-voice-control.ts  use-tool-handler.ts
frontend/src/lib/genai/: audio-streamer.ts  live-client.ts
frontend/src/lib/tools/: receiptTools.ts
frontend/src/lib/utils/: index.ts
frontend/src/pages/: Home.tsx  Login.tsx  ReceiptEdit.tsx  ReceiptList.tsx  ReceiptUpload.tsx
frontend/src/stores/: appStore.ts  receiptStore.ts
frontend/src/types/: genai.ts  receipt.ts
frontend/src/utils/: storage.ts
