[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "google-auth>=2.41.1",
    "google-genai>=1.41.0",
    "hypercorn>=0.17.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
